kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-app
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: app
        image: registry.gitlab.com/abdurahim50/metrics-app:latest
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-app
spec:
  type: LoadBalancer
  ports:
    - port: 8000
  selector:
    app: metrics
