kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-app-service
spec:
  selector:
    app: metrics-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer # or NodePort if LoadBalancer not supported
